--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -7,44 +7,11 @@
     <title>Acira392</title>
 </head>
 <style>
-    table,
-    th,
-    td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
+    
 </style>
 
 <body>
-    <table style="width:100%">
-        <tr>
-            <td>Email</td>
-            <td>Fistname</td>
-            <td>Lastname</td>
-            <td>Address</td>
-            <td>Actions</td>
-        </tr>
-        <% for(let i=0; i < dataTable.length; i++) { %>
-            <tr>
-                <td>
-                    <%= dataTable[i].email %>
-                </td>
-                <td>
-                    <%= dataTable[i].firstName %>
-                </td>
-                <td>
-                    <%= dataTable[i].lastName %>
-                </td>
-                <td>
-                    <%= dataTable[i].address %>
-                </td>
-                <td>
-                    <a href="/edit-crud?id=<%= dataTable[i].id %>" class="btn-edit" type="button">Edit</a>
-                    <a href="/delete-crud?id=<%= dataTable[i].id %>" class="btn-delete" type="button">Delete</a>
-                </td>
-            </tr>
-            <% } %>
-    </table>
+    <h1>XIN CHÀO </h1>
 
 </body>
 
